--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"@ckeditor/ckeditor-cloudservices-core": "^0.1.0",
 		"babel-loader": "^7.1.2",
 		"babel-minify-webpack-plugin": "^0.2.0",
-		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-env": "^1.6.0",
 		"benderjs": "^0.4.2",
 		"benderjs-coverage": "^0.2.1",
 		"benderjs-jquery": "^0.3.0",
